--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,23 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
-
+ext.junitJupiterVersion = '5.9.2'
+ext.jqwikVersion = '1.7.3'
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testImplementation "net.jqwik:jqwik:${jqwikVersion}"
 }
 
 test {
-    useJUnitPlatform()
+    useJUnitPlatform {
+        includeEngines 'jqwik'
+
+        // Or include several Junit engines if you use them
+        // includeEngines 'jqwik', 'junit-jupiter', 'junit-vintage'
+
+        // includeTags 'fast', 'medium'
+        // excludeTags 'slow'
+    }
 }
